trunk/src/main/java/com/tinkerpop/gremlin/lang/antlr/GremlinParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g 2009-11-17 16:21:35

package com.tinkerpop.gremlin.lang.antlr;


import org.antlr.runtime.*;
import org.antlr.runtime.tree.*;

public class GremlinParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "QNAME", "STRING", "NUMBER", "VARREF", "OREXPR", "ANDEXPR", "UNIONEXPR", "EQUEXPRESSION", "PREDICATE", "FUNCALL", "NAMED_AXIS_STEP", "SIMPLE_AXIS_STEP", "ABBREVIATED_AXIS_STEP", "NAME_AXIS", "ATTRIBUTE_AXIS", "EXPRLIST", "ANY_NODE", "ANY_NAMESPACED_NODE", "GPATH", "FOREACH", "FORSET", "LOOPBODY", "Newline", "Foreach", "VariableReference", "In", "SingleAxisStep", "RecursiveAxisStep", "AbbreviatedStep", "AxisName", "AxisNameSeparator", "AbbreviatedAxisSpecifier", "NodeType", "LeftParenthesis", "RightParenthesis", "ProcessingInstruction", "StringLiteral", "Star", "NCName", "Colon", "LeftSquareBracket", "RightSquareBracket", "Comma", "Or", "And", "EqualtyOp", "Pipe", "IntegerLiteral", "DecimalLiteral", "DoubleLiteral", "For", "Letter", "WS"
    };
    public static final int AxisName = 33;
    public static final int AxisNameSeparator = 34;
    public static final int SingleAxisStep = 30;
    public static final int Foreach = 27;
    public static final int NUMBER = 6;
    public static final int ABBREVIATED_AXIS_STEP = 16;
    public static final int And = 48;
    public static final int FORSET = 24;
    public static final int VARREF = 7;
    public static final int Letter = 55;
    public static final int PREDICATE = 12;
    public static final int Comma = 46;
    public static final int ANY_NAMESPACED_NODE = 21;
    public static final int EqualtyOp = 49;
    public static final int ANDEXPR = 9;
    public static final int OREXPR = 8;
    public static final int DoubleLiteral = 53;
    public static final int RightSquareBracket = 45;
    public static final int FUNCALL = 13;
    public static final int NodeType = 36;
    public static final int EXPRLIST = 19;
    public static final int RecursiveAxisStep = 31;
    public static final int NAMED_AXIS_STEP = 14;
    public static final int LeftParenthesis = 37;
    public static final int Colon = 43;
    public static final int QNAME = 4;
    public static final int Or = 47;
    public static final int SIMPLE_AXIS_STEP = 15;
    public static final int AbbreviatedStep = 32;
    public static final int EQUEXPRESSION = 11;
    public static final int NAME_AXIS = 17;
    public static final int Star = 41;
    public static final int WS = 56;
    public static final int UNIONEXPR = 10;
    public static final int IntegerLiteral = 51;
    public static final int STRING = 5;
    public static final int ATTRIBUTE_AXIS = 18;
    public static final int RightParenthesis = 38;
    public static final int StringLiteral = 40;
    public static final int In = 29;
    public static final int Pipe = 50;
    public static final int LOOPBODY = 25;
    public static final int GPATH = 22;
    public static final int LeftSquareBracket = 44;
    public static final int Newline = 26;
    public static final int EOF = -1;
    public static final int DecimalLiteral = 52;
    public static final int AbbreviatedAxisSpecifier = 35;
    public static final int VariableReference = 28;
    public static final int ProcessingInstruction = 39;
    public static final int ANY_NODE = 20;
    public static final int NCName = 42;
    public static final int For = 54;
    public static final int FOREACH = 23;

    // delegates
    // delegators


    public GremlinParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public GremlinParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);

    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() {
        return GremlinParser.tokenNames;
    }

    public String getGrammarFileName() {
        return "/Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g";
    }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "program"
    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:25:1: program : ( statement )+ ;
    public final GremlinParser.program_return program() throws RecognitionException {
        GremlinParser.program_return retval = new GremlinParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GremlinParser.statement_return statement1 = null;


        try {
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:25:9: ( ( statement )+ )
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:25:11: ( statement )+
            {
                root_0 = (Object) adaptor.nil();

                // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:25:11: ( statement )+
                int cnt1 = 0;
                loop1:
                do {
                    int alt1 = 2;
                    int LA1_0 = input.LA(1);

                    if (((LA1_0 >= Foreach && LA1_0 <= VariableReference) || (LA1_0 >= SingleAxisStep && LA1_0 <= AxisName) || (LA1_0 >= AbbreviatedAxisSpecifier && LA1_0 <= NodeType) || (LA1_0 >= ProcessingInstruction && LA1_0 <= NCName) || (LA1_0 >= IntegerLiteral && LA1_0 <= DoubleLiteral))) {
                        alt1 = 1;
                    }


                    switch (alt1) {
                        case 1:
                            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:25:11: statement
                        {
                            pushFollow(FOLLOW_statement_in_program138);
                            statement1 = statement();

                            state._fsp--;

                            adaptor.addChild(root_0, statement1.getTree());

                        }
                        break;

                        default:
                            if (cnt1 >= 1) break loop1;
                            EarlyExitException eee =
                                    new EarlyExitException(1, input);
                            throw eee;
                    }
                    cnt1++;
                } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "statement"
    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:1: statement : ( gpath | foreach ) ( Newline )? ;
    public final GremlinParser.statement_return statement() throws RecognitionException {
        GremlinParser.statement_return retval = new GremlinParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Newline4 = null;
        GremlinParser.gpath_return gpath2 = null;

        GremlinParser.foreach_return foreach3 = null;


        Object Newline4_tree = null;

        try {
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:11: ( ( gpath | foreach ) ( Newline )? )
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:13: ( gpath | foreach ) ( Newline )?
            {
                root_0 = (Object) adaptor.nil();

                // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:13: ( gpath | foreach )
                int alt2 = 2;
                int LA2_0 = input.LA(1);

                if ((LA2_0 == VariableReference || (LA2_0 >= SingleAxisStep && LA2_0 <= AxisName) || (LA2_0 >= AbbreviatedAxisSpecifier && LA2_0 <= NodeType) || (LA2_0 >= ProcessingInstruction && LA2_0 <= NCName) || (LA2_0 >= IntegerLiteral && LA2_0 <= DoubleLiteral))) {
                    alt2 = 1;
                } else if ((LA2_0 == Foreach)) {
                    alt2 = 2;
                } else {
                    NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                    throw nvae;
                }
                switch (alt2) {
                    case 1:
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:14: gpath
                    {
                        pushFollow(FOLLOW_gpath_in_statement149);
                        gpath2 = gpath();

                        state._fsp--;

                        adaptor.addChild(root_0, gpath2.getTree());

                    }
                    break;
                    case 2:
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:22: foreach
                    {
                        pushFollow(FOLLOW_foreach_in_statement153);
                        foreach3 = foreach();

                        state._fsp--;

                        adaptor.addChild(root_0, foreach3.getTree());

                    }
                    break;

                }

                // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:31: ( Newline )?
                int alt3 = 2;
                int LA3_0 = input.LA(1);

                if ((LA3_0 == Newline)) {
                    alt3 = 1;
                }
                switch (alt3) {
                    case 1:
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:27:31: Newline
                    {
                        Newline4 = (Token) match(input, Newline, FOLLOW_Newline_in_statement156);
                        Newline4_tree = (Object) adaptor.create(Newline4);
                        adaptor.addChild(root_0, Newline4_tree);


                    }
                    break;

                }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class foreach_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "foreach"
    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:29:1: foreach : Foreach VariableReference In set= gpath loop= gpath -> ^( FOREACH ^( VARREF VariableReference ) ^( FORSET $set) ^( LOOPBODY $loop) ) ;
    public final GremlinParser.foreach_return foreach() throws RecognitionException {
        GremlinParser.foreach_return retval = new GremlinParser.foreach_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Foreach5 = null;
        Token VariableReference6 = null;
        Token In7 = null;
        GremlinParser.gpath_return set = null;

        GremlinParser.gpath_return loop = null;


        Object Foreach5_tree = null;
        Object VariableReference6_tree = null;
        Object In7_tree = null;
        RewriteRuleTokenStream stream_VariableReference = new RewriteRuleTokenStream(adaptor, "token VariableReference");
        RewriteRuleTokenStream stream_Foreach = new RewriteRuleTokenStream(adaptor, "token Foreach");
        RewriteRuleTokenStream stream_In = new RewriteRuleTokenStream(adaptor, "token In");
        RewriteRuleSubtreeStream stream_gpath = new RewriteRuleSubtreeStream(adaptor, "rule gpath");
        try {
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:29:9: ( Foreach VariableReference In set= gpath loop= gpath -> ^( FOREACH ^( VARREF VariableReference ) ^( FORSET $set) ^( LOOPBODY $loop) ) )
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:29:11: Foreach VariableReference In set= gpath loop= gpath
            {
                Foreach5 = (Token) match(input, Foreach, FOLLOW_Foreach_in_foreach166);
                stream_Foreach.add(Foreach5);

                VariableReference6 = (Token) match(input, VariableReference, FOLLOW_VariableReference_in_foreach168);
                stream_VariableReference.add(VariableReference6);

                In7 = (Token) match(input, In, FOLLOW_In_in_foreach170);
                stream_In.add(In7);

                pushFollow(FOLLOW_gpath_in_foreach174);
                set = gpath();

                state._fsp--;

                stream_gpath.add(set.getTree());
                pushFollow(FOLLOW_gpath_in_foreach178);
                loop = gpath();

                state._fsp--;

                stream_gpath.add(loop.getTree());


                // AST REWRITE
                // elements: VariableReference, loop, set
                // token labels:
                // rule labels: set, retval, loop
                // token list labels:
                // rule list labels:
                // wildcard labels:
                retval.tree = root_0;
                RewriteRuleSubtreeStream stream_set = new RewriteRuleSubtreeStream(adaptor, "rule set", set != null ? set.tree : null);
                RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);
                RewriteRuleSubtreeStream stream_loop = new RewriteRuleSubtreeStream(adaptor, "rule loop", loop != null ? loop.tree : null);

                root_0 = (Object) adaptor.nil();
                // 29:61: -> ^( FOREACH ^( VARREF VariableReference ) ^( FORSET $set) ^( LOOPBODY $loop) )
                {
                    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:29:64: ^( FOREACH ^( VARREF VariableReference ) ^( FORSET $set) ^( LOOPBODY $loop) )
                    {
                        Object root_1 = (Object) adaptor.nil();
                        root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(FOREACH, "FOREACH"), root_1);

                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:29:74: ^( VARREF VariableReference )
                        {
                            Object root_2 = (Object) adaptor.nil();
                            root_2 = (Object) adaptor.becomeRoot((Object) adaptor.create(VARREF, "VARREF"), root_2);

                            adaptor.addChild(root_2, stream_VariableReference.nextNode());

                            adaptor.addChild(root_1, root_2);
                        }
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:29:102: ^( FORSET $set)
                        {
                            Object root_2 = (Object) adaptor.nil();
                            root_2 = (Object) adaptor.becomeRoot((Object) adaptor.create(FORSET, "FORSET"), root_2);

                            adaptor.addChild(root_2, stream_set.nextTree());

                            adaptor.addChild(root_1, root_2);
                        }
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:29:117: ^( LOOPBODY $loop)
                        {
                            Object root_2 = (Object) adaptor.nil();
                            root_2 = (Object) adaptor.becomeRoot((Object) adaptor.create(LOOPBODY, "LOOPBODY"), root_2);

                            adaptor.addChild(root_2, stream_loop.nextTree());

                            adaptor.addChild(root_1, root_2);
                        }

                        adaptor.addChild(root_0, root_1);
                    }

                }

                retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "foreach"

    public static class gpath_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "gpath"
    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:31:1: gpath : ( xpath -> ^( GPATH xpath ) | functionCall -> ^( GPATH functionCall ) | literal -> ^( GPATH literal ) );
    public final GremlinParser.gpath_return gpath() throws RecognitionException {
        GremlinParser.gpath_return retval = new GremlinParser.gpath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GremlinParser.xpath_return xpath8 = null;

        GremlinParser.functionCall_return functionCall9 = null;

        GremlinParser.literal_return literal10 = null;


        RewriteRuleSubtreeStream stream_literal = new RewriteRuleSubtreeStream(adaptor, "rule literal");
        RewriteRuleSubtreeStream stream_xpath = new RewriteRuleSubtreeStream(adaptor, "rule xpath");
        RewriteRuleSubtreeStream stream_functionCall = new RewriteRuleSubtreeStream(adaptor, "rule functionCall");
        try {
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:31:7: ( xpath -> ^( GPATH xpath ) | functionCall -> ^( GPATH functionCall ) | literal -> ^( GPATH literal ) )
            int alt4 = 3;
            switch (input.LA(1)) {
                case SingleAxisStep:
                case RecursiveAxisStep:
                case AbbreviatedStep:
                case AxisName:
                case AbbreviatedAxisSpecifier:
                case NodeType:
                case ProcessingInstruction:
                case Star: {
                    alt4 = 1;
                }
                break;
                case NCName: {
                    switch (input.LA(2)) {
                        case Colon: {
                            int LA4_4 = input.LA(3);

                            if ((LA4_4 == Star)) {
                                alt4 = 1;
                            } else if ((LA4_4 == NCName)) {
                                int LA4_6 = input.LA(4);

                                if ((LA4_6 == LeftParenthesis)) {
                                    alt4 = 2;
                                } else if ((LA4_6 == EOF || (LA4_6 >= Newline && LA4_6 <= VariableReference) || (LA4_6 >= SingleAxisStep && LA4_6 <= AxisName) || (LA4_6 >= AbbreviatedAxisSpecifier && LA4_6 <= NodeType) || (LA4_6 >= ProcessingInstruction && LA4_6 <= NCName) || LA4_6 == LeftSquareBracket || (LA4_6 >= IntegerLiteral && LA4_6 <= DoubleLiteral))) {
                                    alt4 = 1;
                                } else {
                                    NoViableAltException nvae =
                                            new NoViableAltException("", 4, 6, input);

                                    throw nvae;
                                }
                            } else {
                                NoViableAltException nvae =
                                        new NoViableAltException("", 4, 4, input);

                                throw nvae;
                            }
                        }
                        break;
                        case LeftParenthesis: {
                            alt4 = 2;
                        }
                        break;
                        case EOF:
                        case Newline:
                        case Foreach:
                        case VariableReference:
                        case SingleAxisStep:
                        case RecursiveAxisStep:
                        case AbbreviatedStep:
                        case AxisName:
                        case AbbreviatedAxisSpecifier:
                        case NodeType:
                        case ProcessingInstruction:
                        case StringLiteral:
                        case Star:
                        case NCName:
                        case LeftSquareBracket:
                        case IntegerLiteral:
                        case DecimalLiteral:
                        case DoubleLiteral: {
                            alt4 = 1;
                        }
                        break;
                        default:
                            NoViableAltException nvae =
                                    new NoViableAltException("", 4, 2, input);

                            throw nvae;
                    }

                }
                break;
                case VariableReference:
                case StringLiteral:
                case IntegerLiteral:
                case DecimalLiteral:
                case DoubleLiteral: {
                    alt4 = 3;
                }
                break;
                default:
                    NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                    throw nvae;
            }

            switch (alt4) {
                case 1:
                    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:31:9: xpath
                {
                    pushFollow(FOLLOW_xpath_in_gpath213);
                    xpath8 = xpath();

                    state._fsp--;

                    stream_xpath.add(xpath8.getTree());


                    // AST REWRITE
                    // elements: xpath
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (Object) adaptor.nil();
                    // 31:16: -> ^( GPATH xpath )
                    {
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:31:19: ^( GPATH xpath )
                        {
                            Object root_1 = (Object) adaptor.nil();
                            root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(GPATH, "GPATH"), root_1);

                            adaptor.addChild(root_1, stream_xpath.nextTree());

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
                break;
                case 2:
                    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:32:4: functionCall
                {
                    pushFollow(FOLLOW_functionCall_in_gpath227);
                    functionCall9 = functionCall();

                    state._fsp--;

                    stream_functionCall.add(functionCall9.getTree());


                    // AST REWRITE
                    // elements: functionCall
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (Object) adaptor.nil();
                    // 32:18: -> ^( GPATH functionCall )
                    {
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:32:21: ^( GPATH functionCall )
                        {
                            Object root_1 = (Object) adaptor.nil();
                            root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(GPATH, "GPATH"), root_1);

                            adaptor.addChild(root_1, stream_functionCall.nextTree());

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
                break;
                case 3:
                    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:33:4: literal
                {
                    pushFollow(FOLLOW_literal_in_gpath241);
                    literal10 = literal();

                    state._fsp--;

                    stream_literal.add(literal10.getTree());


                    // AST REWRITE
                    // elements: literal
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval != null ? retval.tree : null);

                    root_0 = (Object) adaptor.nil();
                    // 33:14: -> ^( GPATH literal )
                    {
                        // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:33:17: ^( GPATH literal )
                        {
                            Object root_1 = (Object) adaptor.nil();
                            root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(GPATH, "GPATH"), root_1);

                            adaptor.addChild(root_1, stream_literal.nextTree());

                            adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                }
                break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "gpath"

    public static class xpath_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "xpath"
    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:36:1: xpath : locationPath ;
    public final GremlinParser.xpath_return xpath() throws RecognitionException {
        GremlinParser.xpath_return retval = new GremlinParser.xpath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GremlinParser.locationPath_return locationPath11 = null;


        try {
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:36:6: ( locationPath )
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:36:8: locationPath
            {
                root_0 = (Object) adaptor.nil();

                pushFollow(FOLLOW_locationPath_in_xpath260);
                locationPath11 = locationPath();

                state._fsp--;

                adaptor.addChild(root_0, locationPath11.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object) adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "xpath"

    public static class locationPath_return extends ParserRuleReturnScope {
        Object tree;

        public Object getTree() {
            return tree;
        }
    }

    ;

    // $ANTLR start "locationPath"
    // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:38:1: locationPath : ( relativeLocationPath | absoluteLocationPath );
    public final GremlinParser.locationPath_return locationPath() throws RecognitionException {
        GremlinParser.locationPath_return retval = new GremlinParser.locationPath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GremlinParser.relativeLocationPath_return relativeLocationPath12 = null;

        GremlinParser.absoluteLocationPath_return absoluteLocationPath13 = null;


        try {
            // /Users/marko/software/gremlin/trunk/src/main/java/com/tinkerpop/gremlin/parse/Gremlin.g:39:5: ( relativeLocationPath | absoluteLocationPath )
            int alt5 = 2;
            int LA5_0 = input.LA(1);
